--- a/src/components/Header/styles.module.scss
+++ b/src/components/Header/styles.module.scss
@@ -17,6 +17,11 @@
     border: 1px solid #aaa;
     border-radius: 4px;
     cursor: pointer;
+    transition: 0.3s all;
+    &:hover {
+      box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px,
+        rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
+    }
     .refreshIcon {
       width: 20px;
     }
