--- a/src/components/LocationBox/styles.module.scss
+++ b/src/components/LocationBox/styles.module.scss
@@ -7,6 +7,11 @@
   justify-content: space-between;
   align-items: flex-start;
   width: 100%;
+  transition: 0.3s all;
+  &:hover {
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px,
+      rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
+  }
   .locationInfoTop {
     width: 100%;
     display: flex;
@@ -15,6 +20,9 @@
       background-color: rgb(242, 208, 143);
       border-radius: 50px;
       padding: 2px 8px;
+      &.inactiveStatus {
+        background-color: rgb(250, 103, 103);
+      }
     }
   }
   .locationInfoBottom {
