--- a/src/components/LocationCreateModal/styles.module.scss
+++ b/src/components/LocationCreateModal/styles.module.scss
@@ -23,15 +23,40 @@
       flex-direction: column;
       row-gap: 16px;
       width: 100%;
+      .statusSelect {
+        background-color: #fff;
+        padding: 4px 8px;
+        font-size: 16px;
+        border-radius: 8px;
+        cursor: pointer;
+        margin-left: 8px;
+        outline: none;
+        transition: 0.3s all;
+        &:hover {
+          box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px,
+            rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
+        }
+      }
       input {
         width: 100%;
         border: 1px solid;
         border-radius: 8px;
         padding: 8px 16px;
+        margin-top: 4px;
       }
     }
     .addLocation {
       margin-top: 20px;
+      cursor: pointer;
+      transition: 0.3s all;
+      background-color: #fff;
+      border: 1px solid #aaa;
+      padding: 7px 12px;
+      border-radius: 4px;
+      &:hover {
+        box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px,
+          rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
+      }
     }
   }
 }
