--- a/src/components/Filters/styles.module.scss
+++ b/src/components/Filters/styles.module.scss
@@ -1,7 +1,7 @@
 .filtersSection {
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: space-around;
   width: 100%;
   margin-bottom: 16px;
 }
