--- a/src/components/Header/styles.module.scss
+++ b/src/components/Header/styles.module.scss
@@ -14,16 +14,19 @@
     max-width: 100px;
     width: 100%;
     background-color: #fff;
-    border: 1px solid #aaa;
+    border: 2px solid rgb(77, 77, 77);
     border-radius: 4px;
     cursor: pointer;
     transition: 0.3s all;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     &:hover {
       box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px,
         rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
     }
     .refreshIcon {
-      width: 20px;
+      width: 18px;
     }
   }
   .addLocationButton {
