--- a/src/components/LocationBox/styles.module.scss
+++ b/src/components/LocationBox/styles.module.scss
@@ -16,10 +16,19 @@
     width: 100%;
     display: flex;
     justify-content: space-between;
+    margin-bottom: 10px;
     .locationStatus {
       background-color: rgb(242, 208, 143);
       border-radius: 50px;
-      padding: 2px 8px;
+      padding: 4px 6px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      .statusText {
+        font-size: 14px;
+        margin: 0;
+        color: rgb(134, 107, 55);
+      }
       &.inactiveStatus {
         background-color: rgb(250, 103, 103);
       }
@@ -34,11 +43,38 @@
       margin-top: 16px;
     }
     time {
-      margin-top: 16px;
       color: rgb(85, 85, 85);
     }
   }
   .locationText {
     margin: 0;
+  }
+  .locationUserName {
+    margin: 0;
+    font-weight: bold;
+    font-size: 12px;
+  }
+  .locationId {
+    font-size: 14px;
+    font-weight: 500;
+    margin-bottom: 16px;
+  }
+  .locationDate {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    column-gap: 5px;
+    img {
+      width: 15px;
+      height: 15px;
+    }
+    span {
+      font-weight: 500;
+      font-size: 14px;
+      margin: 0;
+    }
+    .locationAgo {
+      margin: 0 !important;
+    }
   }
 }
