--- a/src/components/Home/styles.module.scss
+++ b/src/components/Home/styles.module.scss
@@ -2,4 +2,10 @@
   margin: 0 auto;
   max-width: 400px;
   width: 100%;
+  .loader {
+    position: relative;
+    left: 50%;
+    top: 48px;
+    transform: translateX(-50%);
+  }
 }
