--- a/src/components/Button/button.module.scss
+++ b/src/components/Button/button.module.scss
@@ -2,8 +2,22 @@
   border: 2px solid #000;
   padding: 5px;
   border-radius: 5px;
+  min-width: 60px;
+  display: flex;
+  justify-content: center;
+  cursor: pointer;
+  transition: 0.3s all;
+  &:hover {
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px,
+      rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
+  }
+
   span {
     font-weight: bold;
     font-size: 14px;
+  }
+  img {
+    width: 15px;
+    height: 15px;
   }
 }
