--- a/src/components/Home/styles.module.scss
+++ b/src/components/Home/styles.module.scss
@@ -1,11 +1,53 @@
 .home {
   margin: 0 auto;
-  max-width: 400px;
   width: 100%;
+  display: flex;
+  column-gap: 10px;
+  justify-content: center;
+  .homeLeftSection {
+    max-width: 450px;
+    width: 100%;
+    border: 1px solid #aaa;
+    padding: 20px 30px;
+    border-radius: 5px;
+  }
+  .homeRightSection {
+    max-width: 800px;
+    width: 100%;
+    border-bottom: 1px solid #aaa;
+    border-radius: 5px;
+    height: max-content;
+    .rightSectionHeader {
+      padding: 10px 20px;
+      display: flex;
+      justify-content: space-between;
+      border-bottom: 1px solid #aaa;
+      .headerRightSection {
+        display: flex;
+        column-gap: 20px;
+      }
+    }
+    .rightSectionContent {
+      padding: 10px 20px;
+      display: flex;
+      flex-direction: column;
+      row-gap: 10px;
+      .locationItem {
+        padding: 20px 30px;
+        border: 1px solid #aaa;
+        border-radius: 5px;
+        display: flex;
+        justify-content: flex-end;
+      }
+    }
+  }
   .loader {
     position: relative;
     left: 50%;
     top: 48px;
     transform: translateX(-50%);
+  }
+  .homeRightSection {
+    border: 1px solid #aaa;
   }
 }
