--- a/src/components/LocationBox/styles.module.scss
+++ b/src/components/LocationBox/styles.module.scss
@@ -1,6 +1,7 @@
 .locationBox {
   border: 1px solid #aaa;
   border-radius: 4px;
+  cursor: pointer;
   padding: 16px 24px 16px 32px;
   display: flex;
   flex-direction: column;
