--- a/src/components/Button/button.module.scss
+++ b/src/components/Button/button.module.scss
@@ -1,5 +1,5 @@
 .button {
-  border: 2px solid #000;
+  border: 2px solid var(--black_100);
   padding: 5px;
   border-radius: 5px;
   min-width: 60px;
@@ -8,8 +8,7 @@
   cursor: pointer;
   transition: 0.3s all;
   &:hover {
-    box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px,
-      rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
+    box-shadow: var(--shadow);
   }
 
   span {
