--- a/src/components/DetailsSection/styles.module.scss
+++ b/src/components/DetailsSection/styles.module.scss
@@ -1,15 +1,15 @@
 .homeRightSection {
   max-width: 800px;
   width: 100%;
-  border: 1px solid #aaa;
-  border-bottom: 1px solid #aaa;
+  border: 1px solid var(--gray_100);
+  border-bottom: 1px solid var(--gray_100);
   border-radius: 5px;
   height: max-content;
   .rightSectionHeader {
     padding: 10px 20px;
     display: flex;
     justify-content: space-between;
-    border-bottom: 1px solid #aaa;
+    border-bottom: 1px solid var(--gray_100);
     .headerRightSection {
       display: flex;
       column-gap: 20px;
@@ -20,9 +20,10 @@
     display: flex;
     flex-direction: column;
     row-gap: 10px;
+    min-height: 130px;
     .locationItem {
       padding: 20px 30px;
-      border: 1px solid #aaa;
+      border: 1px solid var(--gray_100);
       border-radius: 5px;
       display: flex;
       justify-content: space-between;
