--- a/src/components/Home/styles.module.scss
+++ b/src/components/Home/styles.module.scss
@@ -7,7 +7,7 @@
   .homeLeftSection {
     max-width: 450px;
     width: 100%;
-    border: 1px solid #aaa;
+    border: 1px solid var(--gray_100);
     padding: 20px 30px;
     border-radius: 5px;
     min-height: 350px;
