--- a/src/components/LocationBox/styles.module.scss
+++ b/src/components/LocationBox/styles.module.scss
@@ -1,5 +1,5 @@
 .locationBox {
-  border: 1px solid #aaa;
+  border: 1px solid var(--gray_100);
   border-radius: 4px;
   cursor: pointer;
   padding: 16px 24px 16px 32px;
@@ -10,8 +10,7 @@
   width: 100%;
   transition: 0.3s all;
   &:hover {
-    box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px,
-      rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
+    box-shadow: var(--shadow);
   }
   .locationInfoTop {
     width: 100%;
@@ -21,10 +20,6 @@
     .statusText {
       font-size: 14px;
       margin: 0;
-      color: rgb(134, 107, 55);
-    }
-    &.inactiveStatus {
-      background-color: rgb(250, 103, 103);
     }
   }
   .locationInfoBottom {
@@ -36,7 +31,7 @@
       margin-top: 16px;
     }
     time {
-      color: rgb(85, 85, 85);
+      color: var(--gray_100);
     }
   }
   .locationText {
