--- a/src/components/LocationCreateModal/styles.module.scss
+++ b/src/components/LocationCreateModal/styles.module.scss
@@ -4,7 +4,7 @@
   height: 100%;
   top: 0;
   left: 0;
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: var(--black_150);
   display: grid;
   place-items: center;
   z-index: 9;
@@ -13,7 +13,7 @@
     width: 100%;
     padding: 20px 20px 40px;
     border-radius: 16px;
-    background-color: #fff;
+    background-color: var(--white_100);
     z-index: 10;
     display: flex;
     flex-direction: column;
@@ -24,7 +24,7 @@
       row-gap: 16px;
       width: 100%;
       .statusSelect {
-        background-color: #fff;
+        background-color: var(--white_100);
         padding: 4px 8px;
         font-size: 16px;
         border-radius: 8px;
@@ -33,8 +33,7 @@
         outline: none;
         transition: 0.3s all;
         &:hover {
-          box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px,
-            rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
+          box-shadow: var(--shadow);
         }
       }
       input {
@@ -49,13 +48,12 @@
       margin-top: 20px;
       cursor: pointer;
       transition: 0.3s all;
-      background-color: #fff;
-      border: 1px solid #aaa;
+      background-color: var(--white_100);
+      border: 1px solid var(--gray_100);
       padding: 7px 12px;
       border-radius: 4px;
       &:hover {
-        box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px,
-          rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
+        box-shadow: var(--shadow);
       }
     }
   }
