--- a/src/components/SearchInput/styles.module.scss
+++ b/src/components/SearchInput/styles.module.scss
@@ -1,7 +1,7 @@
 .searchInput {
   position: relative;
   width: 100%;
-  border: 1px solid #aaa;
+  border: 1px solid var(--gray_100);
   padding: 8px 12px;
   border-radius: 4px;
   margin-bottom: 16px;
